# ecto_corrector

./: CMakeLists.txt  README.rst
scripts/: blackboxes.py  correct_test.py  corrector_test.py  depth_edge_test.py  full_corrector_test.py  labeled_example_writer.py  segmenter_test.py
src/: AddNoise.cpp  ApplyROI.cpp  CMakeLists.txt  CameraInfoSender.cpp  Corrector.cpp  DepthEdgeDetector.cpp  DetectionSimulator.cpp  FullCorrector.cpp  ModelLoader.cpp  ModelROI.cpp  ModelVertices.cpp  Segmenter.cpp  SegmentsToMat.cpp  TODServiceCaller.cpp  TranslationOffset.cpp  ecto_corrector.cpp  ecto_corrector.hpp
